# ai-cli-toolbox

./: .gitignore  README.md  pyproject.toml
src/ai_cli_toolbox/: audio_transcribe.py  email_utils.py  firecrawl_utils.py  main.py  reddit_utils.py  yt_transcript.py
tests/: fixtures.py  test_email_utils.py  test_firecrawl_utils.py  test_reddit_utils.py  test_yt_transcript.py
